# hermes

./: .gitignore  makefile  package-lock.json  package.json  shell.nix  tsconfig.json
.github/workflows/: main.yml
docs/: CNAME  _config.yml  index.html
docs/_data/: articles.json  publications.yml  updated-at.json
docs/assets/css/: main.css
hades/: hades.cabal
hades/app/: Main.hs
hades/src/: Hades.hs
src/: feed.ts  hermes.ts  index.ts  options.ts  utils.ts
test/: feed.test.ts  hermes.test.ts
