cabal-version: 3.6

name: hades
version: 0.1.0.0

common common
  build-depends:
    , base == 4.18.2.0
  ghc-options:
    -Wall

library
  import:
    common
  hs-source-dirs:
    src
  exposed-modules:
    Hades
  build-depends:
    , aeson >= 2.2 && < 2.3
    , bytestring
    , http-client >= 0.7.11 && < 0.8
    , http-client-tls >= 0.3.6 && < 0.4
    , network-uri >= 2.6.4 && < 2.7
    , tagsoup >= 0.14.8 && < 0.15
    , text
    , time
    , tls < 2.0

executable hades
  import:
    common
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , hades

test-suite spec
  import:
    common
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    , hades
  type:
    exitcode-stdio-1.0
